Fix scrolling and FAB position on mobile

--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -1,13 +1,19 @@
 @import "src/styles/tailwind";
+@import "src/styles/breakpoints";
 
 .app-component {
-  @apply .flex .flex-col .h-full;
+  @apply .flex .flex-row .h-full .w-full;
+
+  @include bp-small {
+    @apply .flex-col-reverse;
+
+    main {
+      max-height: calc(100% - 56px);
+    }
+  }
 
   main {
-    @apply .flex .flex-1;
-
-    & > :not(router-outlet):not(md-rail) {
-      @apply .flex-1;
-    }
+    @apply .flex-1 .relative;
+    max-height: 100%;
   }
 }
