--- a/src/material-design/components/md-rail/md-rail.component.scss
+++ b/src/material-design/components/md-rail/md-rail.component.scss
@@ -15,7 +15,8 @@ $title-spacing: 10px;
   height: 100%;
 
   @include bp-small {
-    @apply .fixed .pin-b .flex-row .justify-around;
+    //@apply .fixed .pin-b .flex-row .justify-around;
+    @apply .flex-row .justify-around;
     width: 100%;
     height: $bottom-bar-height;
   }
